# cortex

./: CHANGELOG.md  README.md  deno.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md
docs/plugins/: README.md  developing.md  getting-started.md  manifest-reference.md
src/: main.ts
src/agent/: loop.ts  metacog.ts  soul.ts  sub-agent-types.ts  sub-agent.ts
src/channels/: manager.ts  types.ts
src/cli/: agent-cmd.ts  channels-cmd.ts  chat.ts  daemon.ts  desktop-cmd.ts  eval-cmd.ts  git-cmd.ts  github-cmd.ts  hooks-cmd.ts  marketplace-cmd.ts  mcp-cmd.ts  openclaw-migrate.ts  plugins-cmd.ts  projects-cmd.ts  remote-cmd.ts  serve.ts  service-cmd.ts  sessions.ts  setup.ts  stop.ts  triggers-cmd.ts  tui-cmd.ts  update-cmd.ts  workflow-cmd.ts
src/config/: config.ts  paths.ts  version.ts
src/db/: migrate.ts  sessions.ts
src/desktop/: automation.ts
src/eval/: runner.ts  scorer.ts
src/llm/: bedrock.ts  cohere.ts  deepseek.ts  google.ts  groq.ts  kilo.ts  mistral.ts  openai-compatible.ts  openrouter.ts  router.ts  together.ts  xai.ts
src/mcp/: server.ts
src/memory/: backends.ts  consolidate.ts  heuristics.ts  privacy.ts  skills.ts  store.ts
src/observability/: metrics.ts  tracing.ts
src/pipeline/: builtin.ts  manager.ts  types.ts
src/plugins/: context.ts  events.ts  integrity.ts  loader.ts  manager.ts  namespace.ts  permissions.ts  registry.ts  (+5 more)
tests/: git_enhanced_test.ts
(+55 files in other folders)
