[package]
name = "cortex-desktop"
version = "0.20.0"
edition = "2021"
description = "CortexPrism Desktop App — native desktop wrapper"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "notification", "global-shortcut", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

[build-dependencies]
tauri-build = { version = "2" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
